@startuml
' Define main clases
class Autor {
    + id: long
    + nombre: String
    + nacionalidad: String
}

class Libro {
    + id: long
    + titulo: String
    + isbn: String
    + editorial: String
    + anioPublicacion: Integer
    + prestado: boolean
}

class Socio {
    + id: long
    + nombre: String
    + direccion: String
    + telefono: String
}

class Prestamo {
    + id: long
    + fechaPrestamo: LocalDate
    + fechaDevolucion: LocalDate
}

' Define DAOs
class AutorDAO
class LibroDAO
class SocioDAO
class PrestamosDAO

' Entities relationships
Autor "1" -- "0..*" Libro
Prestamo "1" -- "1" Libro
Prestamo "1" -- "1" Socio

' Relate DAOs to entities
AutorDAO --> Autor
LibroDAO --> Libro
SocioDAO --> Socio
PrestamosDAO --> Prestamo
@enduml
